Fixed mobile paragraph spacing to match UI

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -287,3 +287,10 @@ p.copyright {
   font-size: 1rem;
   font-weight: 300;
 }
+
+@media screen and (max-width: 767px){
+  .zeal-paragraph{
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
